# hemppa

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  bot.py  docker-compose.yml  hemppa.service  pyproject.toml  run.sh  setup.cfg  welcome.md
.github/workflows/: docker-publish.yml  docker.yml
config/: logging.config  logging.yml
hemppa/: __init__.py  __main__.py
hemppa/modules/: alias.py  apod.py  bot.py  cmd.py  cron.py  echo.py  flog.py  gfycat.py  ghproj.py  giphy.py  googlecal.py  help.py  ig.py  inspire.py  jitsi.py  loc.py  md.py  metar.py  mumble.py  mxma.py  nitter.py  notam.py  printing.py  pt.py  rasp.py  relay.py  roll.py  room.py  spaceapi.py  status.py  taf.py  tautulli.py  teamup.py  url.py  users.py  wa.py  welcome_room.py  welcome_server.py  wikipedia.py  xkcd.py
hemppa/modules/common/: exceptions.py  pollingservice.py
modules/: alias.py  apod.py  bot.py  cmd.py  cron.py  devlugdispatch.py  echo.py  flog.py  gfycat.py  ghproj.py  giphy.py  googlecal.py  help.py  ig.py  inspire.py  jitsi.py  loc.py  md.py  metar.py  mqtt.py  mumble.py  mxma.py  nitter.py  notam.py  ovi.py  ping.py  printing.py  pt.py  rasp.py  relay.py  roll.py  room.py  status.py  taf.py  task.py  tautulli.py  teamup.py  twitter.py  uptime.py  url.py  (+8 more)
modules/common/: module.py  pollingservice.py
modules/off/: googlecal.py  notam.py  teamup.py  twitter.py  url.py
test/: test_devlugdispatcher.py
