[project]
name = "hemppa"
packages = [
    {include = "hemppa", from = "."},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "matrix-nio>=0.25.2",
    "pyyaml>=6.0.2",
    "pillow>=11.1.0",
    "requests>=2.32.3",
]

[poetry.optional-dependencies]
